--- a/README.org
+++ b/README.org
@@ -89,6 +89,7 @@
      * [[file:./coding/494_目标和.py][494.目标和😭]]
      * [[file:./coding/120_三角形最小路径和.org][120.三角形最小路径和]]
      * [[file:./coding/迷路的机器人.org][迷路的机器人]]
+     * [[file:./coding/837_新21点.org][837.新21点]]😒
 **** 二叉树
     * [[file:./coding/94_二叉树的中序遍历.py][94.二叉树的中序遍历]]
     * [[file:./coding/96_不同的二叉搜索树.py][96.不同的二叉搜索树]]😭
