--- a/README.org
+++ b/README.org
@@ -90,6 +90,9 @@
      * [[file:./coding/120_三角形最小路径和.org][120.三角形最小路径和]]
      * [[file:./coding/迷路的机器人.org][迷路的机器人]]
      * [[file:./coding/837_新21点.org][837.新21点]]😒
+     * [[file:./coding/808_分汤.py][808.分汤😭]]
+     *[[file:./coding/1406_石子游戏3.py][ 1406.石子游戏3😭]]
+     * [[file:./coding/面试题17_23_最大黑方阵.py][面试题17_23_最大黑方阵]]😢
 **** 二叉树
     * [[file:./coding/94_二叉树的中序遍历.py][94.二叉树的中序遍历]]
     * [[file:./coding/96_不同的二叉搜索树.py][96.不同的二叉搜索树]]😭
@@ -106,6 +109,8 @@
     * [[file:/coding/538_把二叉搜索树转换为累加树.py][538.把二叉搜索树转换为累加树]]
     * [[file:./coding/543_二叉树的直径.py][543.二叉树的直径😊]]
     * 😫[[file:./coding/617_合并二叉树.py][617.合并二叉树]]
+    * [[file:./coding/230_二叉搜索树中第K小的元素.py][230.二叉搜索树中第K小的元素]]😄
+    * [[file:./coding/1372_二叉树中的最长交错路径.py][1372.二叉树中的最长交错路径]]👖
 **** 数组
     * [[file:/coding/31_下一个排列.py][31.下一个排列]]
     * [[file:./coding/169_多数元素.py][169.多数元素😄]]
@@ -144,6 +149,7 @@
     * [[file:/coding/148_排序链表.py][148.排序链表]]
     * [[file:/coding/206_反转链表.org][206.反转链表]]
     * [[file:/coding/142_环形链表II.py][面试题_环路检测]]
+    * [[file:./coding/面试题35复杂链表的复制.py][面试题35复杂链表的复制]]
 **** BFS
     * [[file:/coding/199_二叉树的右视图.org][199.二叉树的右视图]]😁
     * [[file:./coding/301_删除无效的括号.py][301.删除无效的括号]]
@@ -157,6 +163,7 @@
     * [[file:/coding/695_岛屿的最大面积.py][695.岛屿的最大面积😁]]
 **** 拓扑排序
     * [[file:./coding/207_课程表.py][207.课程表]]
+    * [[file:./coding/802_找到最终的安全状态.py][802.找到最终的安全状态]]👖
 **** 位运算
     * [[file:./coding/338_比特位计数.py][338.比特位计数]]
 **** 堆
@@ -172,6 +179,8 @@
 **** 递归
     * [[file:./coding/638_大礼包.py][638.大礼包]]
     * [[file:/coding/1140_石子游戏II.org][1140.石子游戏 II]]😭
+    * [[file:./coding/29_两数相除.py][29.两数相除]]😢
+    * [[file:./coding/1171_从链表中删去总和值为零的连续节点.py][1171.从链表中删去总和值为零的连续节点]]👀
 **** 哈希表
     * [[file:/coding/982_按位与为零的三元组.org][982.按位与为零的三元组]]
 **** 分治
@@ -179,6 +188,7 @@
 **** 并查集
     * [[file:/coding/684_冗余连接.org][684.冗余连接]]🍭
     * [[file:./coding/990_等式方程的可满足性.org][990.等式方程的可满足性]]
+    * [[file:./coding/399_除法求值.py][399.除法求值😭]]
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题                      | deadline      |
