--- a/README.org
+++ b/README.org
@@ -93,6 +93,8 @@
      * [[file:./coding/808_分汤.py][808.分汤😭]]
      *[[file:./coding/1406_石子游戏3.py][ 1406.石子游戏3😭]]
      * [[file:./coding/面试题17_23_最大黑方阵.py][面试题17_23_最大黑方阵]]😢
+     * [[file:./coding/474_一和零.py][474.一和零😢]]
+     * [[file:./coding/1155_掷骰子的N种方法.py][1155.掷骰子的N种方法😢]]
 **** 二叉树
     * [[file:./coding/94_二叉树的中序遍历.py][94.二叉树的中序遍历]]
     * [[file:./coding/96_不同的二叉搜索树.py][96.不同的二叉搜索树]]😭
