--- a/README.org
+++ b/README.org
@@ -103,6 +103,8 @@
      * [[file:./coding/面试题17_23_最大黑方阵.py][面试题17_23_最大黑方阵]]😢
      * [[file:./coding/474_一和零.py][474.一和零😢]]
      * [[file:./coding/1155_掷骰子的N种方法.py][1155.掷骰子的N种方法😢]]
+     * [[file:/coding/1186_删除一次得到子数组最大和.org][1186.删除一次得到子数组最大和]]😭基础版:[[https://leetcode-cn.com/problems/maximum-subarray/][53. 最大子序和]]
+     * [[file:/coding/983_最低票价.org][983.最低票价]]😁
 **** 二叉树
     * [[file:./coding/94_二叉树的中序遍历.py][94.二叉树的中序遍历]]
     * [[file:./coding/96_不同的二叉搜索树.py][96.不同的二叉搜索树]]😭
