--- a/README.org
+++ b/README.org
@@ -210,15 +210,16 @@
    | word2vec                  | 06/04 ~ 0606  |
    | CRF                       | 06/01～0605   |
    | DecisionTree+RandomForest | 06/08 ~ 0612  |
-   | xgboost                   | -             |
+   | xgboost                   | 06/17 ~ 0623 |
    | 朴素贝叶斯                | 0615 ~ 0620   |
    |                           |               |
 ** 分享链接（专题笔记文件地址）
-   | topic                     | black_tear | giant        | van                        |
-   | SVM                       | -          | -            | [[file:./MachineLearning/SVM/机器学习-svm全手写推导_compressed.pdf][机器学习-svm全手写推导.pdf]] |
-   | Word2Vec                  | [[file:./MachineLearning/Word2vec/word2vec.org][word2vec]]   |              |                            |
-   | HMM&CRF                   |            |              | [[file:./MachineLearning/HMM&CRF/HMM&CRF_compressed.pdf][HMM&CRF]]                    |
-   | DecisionTree+RandomForest | -          | [[file:/MachineLearning/DecisionTree&RandomForest/tree.org][decisiontree]] | -                          |
+   | topic                     | black_tear | giant        | van                    |
+   | SVM                       | -          | -            | [[file:./MachineLearning/SVM/机器学习-svm全手写推导_compressed.pdf][机器学习-svm全手写推导]] |
+   | Word2Vec                  | [[file:./MachineLearning/Word2vec/word2vec.org][word2vec]]   |              |                        |
+   | HMM&CRF                   |            |              | [[file:./MachineLearning/HMM&CRF/HMM&CRF_compressed.pdf][HMM&CRF]]                |
+   | DecisionTree+RandomForest | -          | [[file:/MachineLearning/DecisionTree&RandomForest/tree.org][decisiontree]] | -                      |
+   | xgboost                   |            |              | xgboost                |
 *   TO_DO list
    | 数学基础       | 6月 待安排 |
    | 笔试题         | 6月 待安排 |
