--- a/README.org
+++ b/README.org
@@ -105,6 +105,7 @@
      * [[file:/coding/1186_删除一次得到子数组最大和.org][1186.删除一次得到子数组最大和]]😭基础版:[[https://leetcode-cn.com/problems/maximum-subarray/][53. 最大子序和]]
      * [[file:./coding/1406_石子游戏3.py][ 1406.石子游戏3😭]]
      * [[file:./coding/面试题17_23_最大黑方阵.py][面试题17_23_最大黑方阵]]😢
+     * [[file:./coding/238_除自身以外数组的乘积.py][238.除自身以外数组的乘积👟]]
 **** 二叉树
     * [[file:./coding/94_二叉树的中序遍历.py][94.二叉树的中序遍历]]
     * [[file:./coding/96_不同的二叉搜索树.py][96.不同的二叉搜索树]]😭
@@ -123,6 +124,7 @@
     * [[file:./coding/543_二叉树的直径.py][543.二叉树的直径😊]]
     * 😫[[file:./coding/617_合并二叉树.py][617.合并二叉树]]
     * [[file:./coding/1372_二叉树中的最长交错路径.py][1372.二叉树中的最长交错路径]]👖
+    * [[file:./coding/1339_分裂二叉树的最大乘积.py][1339.分裂二叉树的最大乘积]]🉑️
 **** 数组
     * [[file:/coding/31_下一个排列.py][31.下一个排列]]
     * [[file:/coding/48_旋转图像.org][48.旋转图像]]
