--- a/README.org
+++ b/README.org
@@ -146,6 +146,7 @@
      + [[file:./coding/分割链表.org][分割链表]]
      + [[file:/coding/一次编辑.org][面试题_一次编辑]]
 **** 三指针
+    * [[file:/coding/15_三数之和.org][15.三数之和]]
     * [[file:./coding/74_颜色分类.py][74.颜色分类]]😭
 **** 字符串
     * [[file:/coding/838_推多米诺.org][838.推多米诺]]
@@ -154,6 +155,7 @@
     * [[file:./coding/42_接雨水.py][42.接雨水🦆]]
     * [[file:./coding/84_柱状图中最大的矩形.py][84.柱状图中最大的矩形]]😢
     * [[file:./coding/394_字符串解码.py][394.字符串解码😯]]
+    * [[file:/coding/739_每日温度.org][739.每日温度]]✌️
 **** 链表
     * [[file:./coding/2_两数相加.py][2.两数相加]]😜
     * [[file:./coding/19_删除链表的倒数第N个节点.py][19.删除链表的倒数第N个节点]]🇫🇯
@@ -180,8 +182,6 @@
 **** 拓扑排序
     * [[file:./coding/207_课程表.py][207.课程表]]
     * [[file:./coding/802_找到最终的安全状态.py][802.找到最终的安全状态]]👖
-**** 位运算
-    * [[file:./coding/338_比特位计数.py][338.比特位计数]]
 **** 堆
     + [[file:./coding/215_数组中的第K个最大元素.py][215.数组中的第K个最大元素]]😊
     + [[file:./coding/最小k个数.org][最小k个数]]
@@ -205,6 +205,8 @@
     * [[file:./coding/399_除法求值.py][399.除法求值😭]]
     * [[file:/coding/684_冗余连接.org][684.冗余连接]]🍭
     * [[file:./coding/990_等式方程的可满足性.org][990.等式方程的可满足性]]
+**** 位运算
+    * [[file:./coding/338_比特位计数.py][338.比特位计数]]
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题                      | deadline      |
