--- a/README.org
+++ b/README.org
@@ -108,6 +108,7 @@
      * [[file:./coding/1406_石子游戏3.py][ 1406.石子游戏3😭]]
      * [[file:./coding/面试题17_23_最大黑方阵.py][面试题17_23_最大黑方阵]]😢
      * [[file:./coding/238_除自身以外数组的乘积.py][238.除自身以外数组的乘积👟]]
+     * [[file:./coding/801_使序列递增的最小交换次数.org][801.使序列递增的最小交换次数]]
 **** 二叉树
     * [[file:./coding/94_二叉树的中序遍历.py][94.二叉树的中序遍历]]
     * [[file:./coding/96_不同的二叉搜索树.py][96.不同的二叉搜索树]]😭
