--- a/README.org
+++ b/README.org
@@ -155,6 +155,7 @@
     * [[file:./coding/74_颜色分类.py][74.颜色分类]]😭
 **** 字符串
     * [[file:/coding/838_推多米诺.org][838.推多米诺]]
+    * [[file:./coding/49_字母异位词分组.py][49.字母异位词分组]]➕
 **** 栈   
     * [[file:./coding/32_最长有效括号.py][32.最长有效括号😭]]
     * [[file:./coding/42_接雨水.py][42.接雨水🦆]]
