--- a/README.org
+++ b/README.org
@@ -159,6 +159,7 @@
     * [[file:./coding/32_最长有效括号.py][32.最长有效括号😭]]
     * [[file:./coding/42_接雨水.py][42.接雨水🦆]]
     * [[file:./coding/84_柱状图中最大的矩形.py][84.柱状图中最大的矩形]]😢
+    * [[file:./coding/85_最大矩形.org][85.最大矩形]]😭
     * [[file:./coding/394_字符串解码.py][394.字符串解码😯]]
     * [[file:/coding/739_每日温度.org][739.每日温度]]✌️
 **** 链表
@@ -206,6 +207,7 @@
     * [[file:/coding/982_按位与为零的三元组.org][982.按位与为零的三元组]]
 **** 分治
     * [[file:/coding/493_翻转对.org][493.翻转对]]
+    * [[file:./coding/312_戳气球.org][312. 戳气球😭]]
 **** 并查集
     * [[file:./coding/399_除法求值.py][399.除法求值😭]]
     * [[file:/coding/684_冗余连接.org][684.冗余连接]]🍭
