--- a/README.org
+++ b/README.org
@@ -96,7 +96,7 @@
      * [[file:./coding/337_打家劫舍III.py][🍊337.打家劫舍III]]
      * [[file:./coding/416_分割等和子集.py][416.分割等和子集]]🤓
      * [[file:./coding/474_一和零.py][474.一和零😢]]
-     * [[file:./coding/494_目标和.py][494.目标和😭]]
+     * [[file:./coding/494_目标和.org][494.目标和]]🌟🌟
      * [[file:./coding/迷路的机器人.org][迷路的机器人]]
      * [[file:./coding/808_分汤.py][808.分汤😭]]
      * [[file:./coding/837_新21点.org][837.新21点]]😒
@@ -122,7 +122,6 @@
     * [[file:./coding/230_二叉搜索树中第K小的元素.py][230.二叉搜索树中第K小的元素]]😄
     * [[file:./coding/236_二叉树的最近公共祖先.py][236.二叉树的最近公共祖先]]😫
     * [[file:./coding/297_二叉树的序列化与反序列化.py][297.二叉树序列化和反序列化]]😢
-    * [[file:./coding/312_戳气球.py][312.戳气球😖]]
     * [[file:/coding/538_把二叉搜索树转换为累加树.py][538.把二叉搜索树转换为累加树]]
     * [[file:./coding/543_二叉树的直径.py][543.二叉树的直径😊]]
     * 😫[[file:./coding/617_合并二叉树.py][617.合并二叉树]]
