--- a/README.org
+++ b/README.org
@@ -134,6 +134,7 @@
     * [[file:/coding/48_旋转图像.org][48.旋转图像]]
     * [[file:./coding/169_多数元素.py][169.多数元素😄]]
     * [[file:/coding/240_搜索二维矩阵II.py][240.搜索二维矩阵 II😄]]
+    * [[file:/coding/621_任务调度器.org][621.任务调度器]]
     * [[file:/coding/932_漂亮数组.org][932.漂亮数组]]
     * [[file:./coding/973_最接近原点的k个点.py][973.最接近原点的k个点]]
     * [[file:/coding/1267_统计参与通信的服务器.org][1267.统计参与通信的服务器]]😁
@@ -178,6 +179,7 @@
     * [[file:./coding/301_删除无效的括号.py][301.删除无效的括号]]
     * [[file:./coding/节点间通路.org][节点通路]]
 **** DFS
+    * [[file:/coding/17_电话号码的字母组合.org][17.电话号码的字母组合]]
     * [[file:/coding/22_括号生成.org][22.括号生成]]😁
     * [[file:./coding/130_被围绕的区域.org][130.被围绕的区域😭]]
     * [[file:/coding/200_岛屿数量.py][200.岛屿数量]]😊
