--- a/README.org
+++ b/README.org
@@ -113,7 +113,7 @@
     * [[file:./coding/94_二叉树的中序遍历.py][94.二叉树的中序遍历]]
     * [[file:./coding/96_不同的二叉搜索树.py][96.不同的二叉搜索树]]😭
     * [[file:./coding/98_验证二叉搜索树.py][💪98.验证二叉搜索树]]
-    * [[file:/coding/100_相同的树.py][100.相同的树]]😁
+    * [[file:/coding/100_相同的树.org][100.相同的树]]😁
     * [[file:./coding/101_对称二叉树.py][101.对称二叉树🐱]]
     * [[file:./coding/102_二叉树的层序遍历.py][102.二叉树的层序遍历]]
     * [[file:./coding/104_二叉树的最大深度.py][🌲104.二叉树的最大深度]]
