--- a/README.org
+++ b/README.org
@@ -109,6 +109,8 @@
      * [[file:./coding/面试题17_23_最大黑方阵.py][面试题17_23_最大黑方阵]]😢
      * [[file:./coding/238_除自身以外数组的乘积.py][238.除自身以外数组的乘积👟]]
      * [[file:./coding/801_使序列递增的最小交换次数.org][801.使序列递增的最小交换次数]]
+**** 前缀和
+     * [[file:./coding/560_和为K的子数组.py][560.和为K的子数组]]😭
 **** 二叉树
     * [[file:./coding/94_二叉树的中序遍历.py][94.二叉树的中序遍历]]
     * [[file:./coding/96_不同的二叉搜索树.py][96.不同的二叉搜索树]]😭
@@ -128,6 +130,8 @@
     * 😫[[file:./coding/617_合并二叉树.py][617.合并二叉树]]
     * [[file:./coding/1372_二叉树中的最长交错路径.py][1372.二叉树中的最长交错路径]]👖
     * [[file:./coding/1339_分裂二叉树的最大乘积.py][1339.分裂二叉树的最大乘积]]🉑️
+    * [[file:./coding/面试题04.10.检查子树.py][面试题04.10.检查子树➕]]
+    * [[file:./coding/968_监控二叉树.py][968.监控二叉树]]😭
 **** 前缀树Trie
     * [[file:./coding/208_实现Trie(前缀树).py][208.实现Trie(前缀树)]]➕
 **** 数组
