--- a/README.org
+++ b/README.org
@@ -79,7 +79,7 @@
      * [[file:/coding/10_正则表达式匹配.py][10. 正则表达式匹配]]😭推荐阅读:[[https://leetcode-cn.com/problems/regular-expression-matching/solution/ji-yu-guan-fang-ti-jie-gen-xiang-xi-de-jiang-jie-b/][正则表达式-详细讲解，由浅入深]]
      * [[file:./coding/44_通配符匹配.py][44.通配符匹配🦶]]
      * [[/coding/53_最大子序和.py][53.最大子序和]]
-     * [[file:./coding/62_不同路径.py][62.不同路径]]🐶
+     * [[file:./coding/62_不同路径.org][62.不同路径]]
      * [[file:./coding/64_最小路径和.py][64.最小路径和]]😭
      * [[file:/coding/72_编辑距离.py][72.编辑距离]]🌟
      * [[file:./coding/120_三角形最小路径和.org][120.三角形最小路径和]]
@@ -128,6 +128,8 @@
     * 😫[[file:./coding/617_合并二叉树.py][617.合并二叉树]]
     * [[file:./coding/1372_二叉树中的最长交错路径.py][1372.二叉树中的最长交错路径]]👖
     * [[file:./coding/1339_分裂二叉树的最大乘积.py][1339.分裂二叉树的最大乘积]]🉑️
+    * [[file:./coding/655_输出二叉树.org][655.输出二叉树]]
+    * [[file:./coding/572_另一个🌲的子🌲.org][572.另一个🌲的子🌲]]
 **** 前缀树Trie
     * [[file:./coding/208_实现Trie(前缀树).py][208.实现Trie(前缀树)]]➕
 **** 数组
