--- a/README.org
+++ b/README.org
@@ -142,6 +142,7 @@
     * [[file:./coding/572_另一个🌲的子🌲.org][572.另一个🌲的子🌲]]
     * [[file:./coding/面试题04.10.检查子树.py][面试题04.10.检查子树➕]]
     * [[file:./coding/968_监控二叉树.py][968.监控二叉树]]😭
+    * [[file:/coding/814_二叉树剪枝.org][814.二叉树剪枝✌️]]
 **** 前缀树Trie
     * [[file:./coding/208_实现Trie(前缀树).py][208.实现Trie(前缀树)]]➕
 **** 数组
