--- a/README.org
+++ b/README.org
@@ -224,8 +224,9 @@
 **** 哈希表
     * [[file:/coding/982_按位与为零的三元组.org][982.按位与为零的三元组]]
 **** 分治
-    * [[file:/coding/493_翻转对.org][493.翻转对]]
+    * [[file:/coding/395_至少有K个重复字符的最长子串.org][395.至少有K个重复字符的最长子串]]
     * [[file:./coding/312_戳气球.org][312. 戳气球😭]]
+    * [[file:/coding/493_翻转对.org][493.翻转对]]
 **** 并查集
     * [[file:./coding/399_除法求值.py][399.除法求值😭]]
     * [[file:/coding/684_冗余连接.org][684.冗余连接]]🍭
