--- a/README.org
+++ b/README.org
@@ -156,6 +156,7 @@
     * [[file:/coding/1267_统计参与通信的服务器.org][1267.统计参与通信的服务器]]😁
     * [[file:/coding/面试题_主要元素.org][面试题_主要元素-摩尔投票法]]
     * [[file:/coding/2出现的次数.org][面试题_2出现的次数]]🤒️
+    * [[file:./coding/384_打乱数组.org][384. 打乱数组]]
 **** 双指针
      + [[file:./coding/11_成最多水的容器.py][11.盛最多水的容器]]
      + [[file:./coding/15_三数之和.py][15.三数之和😂]]
