--- a/README.org
+++ b/README.org
@@ -91,7 +91,7 @@
      * [[file:./coding/64_最小路径和.py][64.最小路径和]]😭
      * [[file:/coding/72_编辑距离.py][72.编辑距离]]🌟
      * [[file:./coding/120_三角形最小路径和.org][120.三角形最小路径和]]
-     * [[file:./coding/121_买卖股票的最佳时机.py][121.买卖股票的最佳时机]]🍉推荐阅读:[[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/solution/yi-ge-fang-fa-tuan-mie-6-dao-gu-piao-wen-ti-by-l-3/][一个方法团灭6道股票问题]]
+     * [[file:./coding/121_买卖股票的最佳时机.org][121.买卖股票的最佳时机系列问题]]🍉推荐阅读:[[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/solution/yi-ge-fang-fa-tuan-mie-6-dao-gu-piao-wen-ti-by-l-3/][一个方法团灭6道股票问题]]
      * 💰[[file:/coding/123_买卖股票的最佳时机III.py][123.买票股票的最佳时机III]]
      * 🥤[[file:./coding/139_单词拆分.py][139.单词拆分]]
      * [[file:./coding/152_乘积的最大子数组.py][152.乘积的最大子数组]]🦷
