--- a/README.org
+++ b/README.org
@@ -117,8 +117,6 @@
      * [[file:./coding/面试题17_23_最大黑方阵.py][面试题17_23_最大黑方阵]]😢
      * [[file:./coding/238_除自身以外数组的乘积.py][238.除自身以外数组的乘积👟]]
      * [[file:./coding/801_使序列递增的最小交换次数.org][801.使序列递增的最小交换次数]]
-**** 前缀和
-     * [[file:./coding/560_和为K的子数组.py][560.和为K的子数组]]😭
 **** 二叉树
     * [[file:./coding/94_二叉树的中序遍历.py][94.二叉树的中序遍历]]
     * [[file:./coding/96_不同的二叉搜索树.py][96.不同的二叉搜索树]]😭
@@ -222,6 +220,9 @@
     * [[file:./coding/638_大礼包.py][638.大礼包]]
     * [[file:/coding/1140_石子游戏II.org][1140.石子游戏 II]]😭
     * [[file:./coding/1171_从链表中删去总和值为零的连续节点.py][1171.从链表中删去总和值为零的连续节点]]👀
+**** 回溯法
+    * [[file:/coding/39_组合总数.org][39.组合总数]]
+    * [[file:/coding/40_组合总和II.org][40.组合总和II]]
 **** 哈希表
     * [[file:/coding/982_按位与为零的三元组.org][982.按位与为零的三元组]]
     * [[file:./coding/454_四数相加II.py][454.四数相加II]]➕
@@ -233,9 +234,12 @@
     * [[file:./coding/399_除法求值.py][399.除法求值😭]]
     * [[file:/coding/684_冗余连接.org][684.冗余连接]]🍭
     * [[file:./coding/990_等式方程的可满足性.org][990.等式方程的可满足性]]
+**** 前缀和
+     * [[file:./coding/560_和为K的子数组.py][560.和为K的子数组]]😭
 **** 位运算
     * [[file:./coding/338_比特位计数.org][338.比特位计数]]
 **** 其他
+    * [[file:/coding/166_分数到小数.org][166.分数到小数]]
     * [[file:/coding/326_3的幂.org][326.3的幂]]
 * 📣MachineLearning分享篇
 ** ✈️学习计划
