--- a/README.org
+++ b/README.org
@@ -165,6 +165,7 @@
      + [[file:/coding/345_反转字符串中的元音字母.py][345.反转字符串中的元音字母]]
      + [[file:./coding/分割链表.org][分割链表]]
      + [[file:/coding/一次编辑.org][面试题_一次编辑]]
+     + [[file:./coding/283_移动零.py][283.移动零🐸]]
 **** 三指针
     * [[file:/coding/15_三数之和.org][15.三数之和]]
     * [[file:./coding/74_颜色分类.py][74.颜色分类]]😭
