--- a/README.org
+++ b/README.org
@@ -244,6 +244,7 @@
 **** 其他
     * [[file:/coding/166_分数到小数.org][166.分数到小数]]
     * [[file:/coding/326_3的幂.org][326.3的幂]]
+    * [[file:./coding/220_存在重复元素III.py][220.存在重复元素III（桶）]]
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题                      | deadline      |
