--- a/README.org
+++ b/README.org
@@ -148,6 +148,7 @@
     * [[file:/coding/36_有效的数独.org][36.有效的数独]]
     * [[file:/coding/48_旋转图像.org][48.旋转图像]]
     * [[file:./coding/169_多数元素.py][169.多数元素😄]]
+    * [[file:/coding/201_数字范围按位与.org][201.数字范围按位与]]
     * [[file:/coding/240_搜索二维矩阵II.py][240.搜索二维矩阵 II😄]]
     * [[file:/coding/621_任务调度器.org][621.任务调度器]]
     * [[file:/coding/932_漂亮数组.org][932.漂亮数组]]
@@ -227,6 +228,7 @@
 **** 回溯法
     * [[file:/coding/39_组合总数.org][39.组合总数]]
     * [[file:/coding/40_组合总和II.org][40.组合总和II]]
+    * [[file:/coding/698_划分为k个相等的子集.org][698.划分为k个相等的子集]]🍺
 **** 哈希表
     * [[file:/coding/982_按位与为零的三元组.org][982.按位与为零的三元组]]
     * [[file:./coding/454_四数相加II.py][454.四数相加II]]➕
