--- a/README.org
+++ b/README.org
@@ -100,7 +100,7 @@
      * [[file:/coding/279_完全平方数.py][279.完全平方数]]😄(类似题型: [[https://leetcode-cn.com/problems/coin-change/][零钱兑换]])
      * [[file:./coding/300_最长上升子序列.py][300.最长上升子序列]]😣
      * [[file:./coding/309_最佳买卖股票时机含冷冻期.py][309.最佳买卖股票时机含冷冻期]]
-     * [[file:./coding/322_零钱兑换.py][322.零钱兑换]]
+     * [[file:./coding/322_零钱兑换.org][322.零钱兑换]]
      * [[file:./coding/337_打家劫舍III.py][🍊337.打家劫舍III]]
      * [[file:./coding/416_分割等和子集.py][416.分割等和子集]]🤓
      * [[file:./coding/474_一和零.py][474.一和零😢]]
@@ -156,7 +156,9 @@
     * [[file:/coding/1267_统计参与通信的服务器.org][1267.统计参与通信的服务器]]😁
     * [[file:/coding/面试题_主要元素.org][面试题_主要元素-摩尔投票法]]
     * [[file:/coding/2出现的次数.org][面试题_2出现的次数]]🤒️
-    * [[file:./coding/384_打乱数组.org][384. 打乱数组]]
+    * [[file:./coding/384_打乱数组.org][384.打乱数组]]
+    * [[file:./coding/268_缺失数字.org][268.缺失数字]]
+    * [[file:./coding/134_加油站.org][134.⛽️]]
 **** 双指针
      + [[file:./coding/11_成最多水的容器.py][11.盛最多水的容器]]
      + [[file:./coding/15_三数之和.py][15.三数之和😂]]
