--- a/README.org
+++ b/README.org
@@ -203,6 +203,7 @@
     * [[file:./coding/301_删除无效的括号.py][301.删除无效的括号]]
     * [[file:./coding/节点间通路.org][节点通路]]
     * [[file:./coding/127_单词接龙.py][127.单词接龙]]👖
+    * [[file:./coding/886_可能的二分法.py][886.可能的二分法➕]]
 **** DFS
     * [[file:/coding/17_电话号码的字母组合.org][17.电话号码的字母组合]]
     * [[file:/coding/22_括号生成.org][22.括号生成]]😁
@@ -234,7 +235,7 @@
 **** 回溯法
     * [[file:/coding/39_组合总数.org][39.组合总数]]
     * [[file:/coding/40_组合总和II.org][40.组合总和II]]
-    * [[file:/coding/698_划分为k个相等的子集.org][698.划分为k个相等的子集]]🍺
+    *x [[file:/coding/698_划分为k个相等的子集.org][698.划分为k个相等的子集]]🍺
 **** 哈希表
     * [[file:/coding/982_按位与为零的三元组.org][982.按位与为零的三元组]]
     * [[file:./coding/454_四数相加II.py][454.四数相加II]]➕
@@ -250,6 +251,8 @@
      * [[file:./coding/560_和为K的子数组.py][560.和为K的子数组]]😭
 **** 位运算
     * [[file:./coding/338_比特位计数.org][338.比特位计数]]
+**** 位操作分组
+    * [[file:./coding/剑指Offer56-I.数组中数字出现的次数.py][剑指Offer56-I.数组中数字出现的次数🐱]]
 **** 其他
     * [[file:/coding/166_分数到小数.org][166.分数到小数]]
     * [[file:/coding/326_3的幂.org][326.3的幂]]
