--- a/README.org
+++ b/README.org
@@ -253,6 +253,8 @@
     * [[file:./coding/338_比特位计数.org][338.比特位计数]]
 **** 位操作分组
     * [[file:./coding/剑指Offer56-I.数组中数字出现的次数.py][剑指Offer56-I.数组中数字出现的次数🐱]]
+**** 数学推导
+    * [[file:/coding/剪绳子.org][剪绳子]]✌️
 **** 其他
     * [[file:/coding/166_分数到小数.org][166.分数到小数]]
     * [[file:/coding/326_3的幂.org][326.3的幂]]
