--- a/README.org
+++ b/README.org
@@ -213,6 +213,7 @@
     * [[file:/coding/486_预测赢家.org][486.预测赢家.org]]
     * [[file:./coding/576_出界的路径数.org][576.出界的路径数]]
     * [[file:/coding/695_岛屿的最大面积.py][695.岛屿的最大面积😁]]
+    * [[file:./coding/1415.长度为n的开心字符串中字典序第k小的字符串.py][1415.长度为n的开心字符串中字典序第k小的字符串]]➕
 **** 拓扑排序
     * [[file:./coding/207_课程表.py][207.课程表]]
     * [[file:./coding/802_找到最终的安全状态.py][802.找到最终的安全状态]]👖
