--- a/README.org
+++ b/README.org
@@ -227,6 +227,7 @@
     * [[file:/coding/162_寻找峰值.org][162.寻找峰值🐶]]
     * [[file:/coding/287_寻找重复数.org][287.寻找重复数]]😁
     * [[file:./coding/378_有序矩阵中第K小的元素.org][378.有序矩阵中第K小的元素]]😭
+    * [[file:/coding/1201_丑数III.org][1201.丑数III]]
 **** 递归
     * [[file:./coding/29_两数相除.py][29.两数相除]]😢
     * [[file:./coding/638_大礼包.py][638.大礼包]]
