--- a/README.org
+++ b/README.org
@@ -84,6 +84,8 @@
    | 06/29              |          | [[https://leetcode-cn.com/problems/edit-distance/][72.编辑距离]] / [[https://leetcode-cn.com/problems/zero-matrix-lcci][零矩阵]]                          | [[https://leetcode-cn.com/problems/coin-change/][322.零钱兑换]] / [[https://leetcode-cn.com/problems/jian-sheng-zi-lcof][剪绳子]]                               | [[https://leetcode-cn.com/problems/shu-zu-zhong-shu-zi-chu-xian-de-ci-shu-lcof][数组中数字出现的次数]] / [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-with-cooldown/][309.最佳买卖股票时机含冷冻期]]        |       |
    | 06/30              |          | [[https://leetcode-cn.com/problems/wiggle-subsequence][摆动序列]] /  [[https://leetcode-cn.com/problems/sliding-window-maximum/][239.滑动窗口最大值]]                | [[https://leetcode-cn.com/problems/ugly-number-iii][丑数 III]] / [[https://leetcode-cn.com/problems/burst-balloons][312.戳气球]]                               | [[https://leetcode-cn.com/problems/the-k-th-lexicographical-string-of-all-happy-strings-of-length-n][长度为 n 的开心字符串中字典序第 k 小的字符串]] /  [[https://leetcode-cn.com/problems/target-sum/][494.目标和]] |       |
    | 06/31              |          | [[https://leetcode-cn.com/problems/teemo-attacking][提莫攻击]] / [[https://leetcode-cn.com/problems/wildcard-matching][44.通配符匹配]]                      | [[https://leetcode-cn.com/problems/remove-invalid-parentheses/][301.删除无效的括号]] / [[https://leetcode-cn.com/problems/clone-graph][克隆图]]                         | [[https://leetcode-cn.com/problems/trapping-rain-water/][42.接雨水]] / [[https://leetcode-cn.com/problems/triangle][三角形最小路径和]]                               |       |
+   | 新的月份开始啦！   |          |                                               |                                                     |                                                            |       |
+   | 07/01              |          | [[https://leetcode-cn.com/problems/binary-tree-inorder-traversal/][非递归中序遍历]] / [[https://leetcode-cn.com/problems/is-graph-bipartite][判断二分图]]                   | [[https://leetcode-cn.com/problems/sort-integers-by-the-power-value][将整数按权重排序]] / [[https://leetcode-cn.com/problems/maximal-rectangle/][最大矩形]]                         | [[https://leetcode-cn.com/problems/redundant-connection][冗余连接]] / [[https://leetcode-cn.com/problems/count-servers-that-communicate][统计参与通信的服务器]]                            |       |
 ** 🧠解题思路
 *** 题目列表
 **** 动态规划
@@ -299,7 +301,7 @@
 | 机器学习概述博客   |                                                          | gitbooks.io | [[https://shunliz.gitbooks.io/machine-learning/content/dl/word2vec/cbow-skip-n.html][🚢]]     |
 | BERT、XLNet、MPNet | 从BERT、XLNet到MPNet，细看NLP预训练模型发展变迁史        | 知乎        | [[https://zhuanlan.zhihu.com/p/146325984][👉]]     |
 | EDA、半监督综述    | NLP中的少样本困境问题探究                                | 公众号      | [[https://mp.weixin.qq.com/s/gt-XJCTXJ-4GUizjoqzWvw][👉]]     |
-|                    |                                                          |             |        |
+| 《背包九讲》       |                                                          | [[file:./DP/《背包九讲》.pdf][🎒]]          |        |
 ** 优秀论文推荐及解析
 | 主题                     | 标题                                  | 来源     | 一句话概述                                        |
 | 多模态特征融合           | [[https://www.aclweb.org/anthology/P19-1046/][HFFN]]                                  | ACL2019  | 如何有效结合语音、文本、图像的特征向              |
