--- a/coding/684_冗余连接.org
+++ b/coding/684_冗余连接.org
@@ -16,6 +16,7 @@
 **** 1.初识时，1-N每一个结点独自构成一个集合，每一个结点所在集合的「代表结点」就是该结点自身
 **** 2.引入一条边[a, b]时，统一视为a -> b，即a指向b，可以视b是a的父结点；分别计算a、b结点各自所在集合的代表结点a'，b'
 **** 3.如果 a'==b'。说明加入边[a, b]后肯定形成了闭环，直接返回[a, b]；否则更新 nums[a'] = b'；继续遍历下一条边。 
+**** add-lyf:易错 由于问题中可能存在不同子图之间的关系，故不能直接通过边的数量和顶点数量来判断是否有环！
 * code
 #+BEGIN_SRC python
 class Solution:
