--- a/README.org
+++ b/README.org
@@ -86,6 +86,7 @@
    | 06/31              |          | [[https://leetcode-cn.com/problems/teemo-attacking][提莫攻击]] / [[https://leetcode-cn.com/problems/wildcard-matching][44.通配符匹配]]                      | [[https://leetcode-cn.com/problems/remove-invalid-parentheses/][301.删除无效的括号]] / [[https://leetcode-cn.com/problems/clone-graph][克隆图]]                         | [[https://leetcode-cn.com/problems/trapping-rain-water/][42.接雨水]] / [[https://leetcode-cn.com/problems/triangle][三角形最小路径和]]                               |       |
    | 新的月份开始啦！   |          |                                               |                                                     |                                                            |       |
    | 07/01              |          | [[https://leetcode-cn.com/problems/binary-tree-inorder-traversal/][非递归中序遍历]] / [[https://leetcode-cn.com/problems/is-graph-bipartite][判断二分图]]                   | [[https://leetcode-cn.com/problems/sort-integers-by-the-power-value][将整数按权重排序]] / [[https://leetcode-cn.com/problems/maximal-rectangle/][最大矩形]]                         | [[https://leetcode-cn.com/problems/redundant-connection][冗余连接]] / [[https://leetcode-cn.com/problems/count-servers-that-communicate][统计参与通信的服务器]]                            |       |
+   | 07/02              |          | [[https://leetcode-cn.com/problems/circus-tower-lcci][马戏团人塔]] / [[https://leetcode-cn.com/problems/shortest-path-with-alternating-colors][颜色交替的最短路径]]               | [[https://leetcode-cn.com/problems/search-rotate-array-lcci][搜索旋转数组]] / [[https://leetcode-cn.com/problems/valid-permutations-for-di-sequence][DI序列的有效排列]] (二分查找+DP)       | [[https://leetcode-cn.com/problems/successor-lcci][后继者]] / [[https://leetcode-cn.com/problems/coin-lcci][硬币]] (DFS+🎒)                                     |       |
 ** 🧠解题思路
 *** 题目列表
 **** 动态规划
