--- a/README.org
+++ b/README.org
@@ -127,6 +127,7 @@
      * [[file:./coding/面试题17_23_最大黑方阵.py][面试题17_23_最大黑方阵]]😢
      * [[file:./coding/238_除自身以外数组的乘积.py][238.除自身以外数组的乘积👟]]
      * [[file:./coding/801_使序列递增的最小交换次数.org][801.使序列递增的最小交换次数]]
+     * [[file:./coding/376_摆动序列.org][376.摆动序列]]
 **** 二叉树
     * [[file:./coding/94_二叉树的中序遍历.py][94.二叉树的中序遍历]]
     * [[file:./coding/96_不同的二叉搜索树.py][96.不同的二叉搜索树]]😭
@@ -169,6 +170,7 @@
     * [[file:./coding/384_打乱数组.org][384.打乱数组]]
     * [[file:./coding/268_缺失数字.org][268.缺失数字]]
     * [[file:./coding/134_加油站.org][134.⛽️]]
+    * [[file:./coding/零矩阵.org][零矩阵]]
 **** 双指针
      + [[file:./coding/11_成最多水的容器.py][11.盛最多水的容器]]
      + [[file:./coding/15_三数之和.py][15.三数之和😂]]
