--- a/README.org
+++ b/README.org
@@ -128,6 +128,7 @@
      * [[file:./coding/238_除自身以外数组的乘积.py][238.除自身以外数组的乘积👟]]
      * [[file:./coding/801_使序列递增的最小交换次数.org][801.使序列递增的最小交换次数]]
      * [[file:./coding/376_摆动序列.org][376.摆动序列]]
+     * [[file:./coding/🎪人塔.org][🎪人塔🌧️]]
 **** 二叉树
     * [[file:./coding/94_二叉树的中序遍历.py][94.二叉树的中序遍历]]
     * [[file:./coding/96_不同的二叉搜索树.py][96.不同的二叉搜索树]]😭
@@ -268,6 +269,7 @@
      * [[file:./coding/560_和为K的子数组.py][560.和为K的子数组]]😭
 **** 位运算
     * [[file:./coding/338_比特位计数.org][338.比特位计数]]
+    * [[file:./coding/数组中数字出现的次数.org][数组中数字出现的次数]]
 **** 位操作分组
     * [[file:./coding/剑指Offer56-I.数组中数字出现的次数.py][剑指Offer56-I.数组中数字出现的次数🐱]]
 **** 数学推导
